--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,13 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-data-redis</artifactId>
-		    </dependency>
+		</dependency>
+<!--Jasypt-->		
+		<dependency>
+    		<groupId>com.github.ulisesbocchio</groupId>
+    		<artifactId>jasypt-spring-boot-starter</artifactId>
+    		<version>3.0.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
