--- a/DockerFile
+++ b/DockerFile
@@ -5,7 +5,7 @@ COPY . .
 
 RUN mvn clean package
 
-FROM openjdk:17
+FROM eclipse-temurin:17-jdk
 
 WORKDIR /app
 COPY --from=builder /build/target/*.jar /app/ROOT.jar
