--- a/DockerFile
+++ b/DockerFile
@@ -3,7 +3,7 @@ FROM maven:3.9.4-eclipse-temurin-17 as builder
 WORKDIR /build
 COPY . .
 
-RUN mvn clean package
+RUN mvn clean package -DskipTests
 
 FROM eclipse-temurin:17-jdk
 
